--- a/app/views/static/terms.html.erb
+++ b/app/views/static/terms.html.erb
@@ -8,7 +8,7 @@ We may change these Terms of Use from time to time without notice. By continuing
 </p>
 
 <p>
-2. <b>Privacy:</b>  You understand that any information you submit or provided by you will be treated in the manner described in these Terms of Use and the GW Privacy Policy.
+2. <b>Privacy:</b>  You understand that any information you submit or provided by you will be treated in the manner described in these Terms of Use and the GW <a href=http://www.gwu.edu/privacy-policy target=”_blank”>Privacy Policy</a>.
 </p>
 
 <p>
