Changed Penn State to GWU.  Fixes #126.

--- a/app/views/static/help.html.erb
+++ b/app/views/static/help.html.erb
@@ -26,7 +26,7 @@
       <ol>
         <li><b>Reliability:</b> GW ScholarSpace is a GW service that is fully funded and supported by the University. The GW Libraries manages and makes persistently accessible the content that is deposited into GW ScholarSpace.</li>
         <li><b>Preservation:</b> Our main focus is to preserve your scholarly work and make it accessible for the long term.  Files deposited into GW ScholarSpace undergo audits and other digital preservation checks. This helps ensure that your scholarship will be available for generations to come. Dropbox and Box are commercial services – businesses – whose main objectives are to enable file sharing and file storage.</li>
-        <li><b>Sharing:</b> GW ScholarSpace gives you the option to share your work with a worldwide audience. Permissions may be set for each file that you upload (public, Penn State only, or private).  If you choose to make your content publicly accessible, researchers from around the world can easily discover and find your work via major search engines, such as Google.</li>
+        <li><b>Sharing:</b> GW ScholarSpace gives you the option to share your work with a worldwide audience. Permissions may be set for each file that you upload (public, GWU only, or private).  If you choose to make your content publicly accessible, researchers from around the world can easily discover and find your work via major search engines, such as Google.</li>
       </ol>
   </li>
 </ul>
