Agreement - corrected the term for GW-level access only and now uses the configurable lable.  Help: Clarified that the help line is the LIT help line.  Removed system maintenance hours bullet.  Removed some text from the max uplaod size bullet.

--- a/app/views/static/agreement.html.erb
+++ b/app/views/static/agreement.html.erb
@@ -24,13 +24,13 @@ In the alternative, if you do not designate a Creative Commons license but choos
 </p>
 
 
-<h3>Visibility Level: <span class=”label label-info”>THE GEORGE WASHINGTON UNIVERSITY COMMUNITY ACCESS</span></h3>
+<h3>Visibility Level: <span class=”label label-info”>THE GEORGE WASHINGTON UNIVERSITY</span></h3>
 <p>
-If you select the George Washington University Community Access option, you are allowing only users of GW network to view and access your Work. Your Work will not be accessible to colleagues or students at other universities or to members of the public. If you want your Work to be accessible to the broader scholarly community, you should consider selecting the Open Access option instead. If designated by you in writing to GW, you may also further limit access to only specific individuals or groups of individuals at GW.
+If you select a visibility level of <%=t('sufia.institution_name') %>, you are allowing only users of the GW network to view and access your Work. Your Work will not be accessible to colleagues or students at other universities or to members of the public. If you want your Work to be accessible to the broader scholarly community, you should consider selecting the Open Access option instead. If designated by you in writing to GW, you may also further limit access to only specific individuals or groups of individuals at GW.
 </p>
 
 <p>
-By choosing the George Washington University Community Access option, you grant GW a non-exclusive, worldwide license and right to publicly display, provide access to, and distribute your Work (including the metadata and abstract) to students, faculty, staff, other authorized users of the GW network, and walk-in users of the George Washington University libraries for non-commercial research, educational, or related academic purposes only. If you have limited access to specific individuals or groups of individuals, GW will provide access to your Work only to those users. You also authorize GW to allow the George Washington University community members identified herein to use, access, and distribute your Work (including the metadata and abstract) for personal non-commercial research, educational, or related academic purposes only.
+By choosing <%=t('sufia.institution_name') %> option, you grant GW a non-exclusive, worldwide license and right to publicly display, provide access to, and distribute your Work (including the metadata and abstract) to students, faculty, staff, other authorized users of the GW network, and walk-in users of the George Washington University libraries for non-commercial research, educational, or related academic purposes only. If you have limited access to specific individuals or groups of individuals, GW will provide access to your Work only to those users. You also authorize GW to allow the George Washington University community members identified herein to use, access, and distribute your Work (including the metadata and abstract) for personal non-commercial research, educational, or related academic purposes only.
 </p>
 
 
