--- a/app/views/static/help.html.erb
+++ b/app/views/static/help.html.erb
@@ -4,19 +4,18 @@
 <p>If you need to report a problem using GW ScholarSpace, or would like to request service assistance, consultation, or share feedback, please use the following contact options: </p>
 <ul>
   <li>Submit your issue via the <a href="https://scholarspace.library.gwu.edu/contact" title="Contact for GW ScholarSpace support">Contact Form</a>. The form will go to GW ScholarSpace User Services, and a librarian will get back to you within two business days</li>
-  <li>GW ScholarSpace phone line: (202) 994-8278. Your call will be answered, or voicemail returned, by staff in the <a href="http://library.gwu.edu/scholarly-technology-group" target="_blank">Scholarly Technology Group</a> in the <a href="http://library.gwu.edu" target="_blank">GW Libraries</a>.</li>
+  <li>GW Library Information Technology (LIT) help line: (202) 994-8278. Your call will be answered, or voicemail returned, by staff in the <a href="http://library.gwu.edu/scholarly-technology-group" target="_blank">Scholarly Technology Group</a> in the <a href="http://library.gwu.edu" target="_blank">GW Libraries</a>.</li>
 </ul>
 
 <h2>Support Hours</h2>
 <ul>
   <li>Service Hours: Monday - Friday 8:00 AM - 5:00 PM</li>
-  <li>System Maintenance Hours: To keep systems running at peak performance, and to ensure the best possible service, routine testing and maintenance are performed during the daily maintenance window from 5:00 a.m. to 7:00 a.m. EST/EDT. During this time, systems and services may be affected</li>
 </ul>
 
 <h2 id="faq">Frequently Asked Questions</h2>
 <p>How large a file can I upload to GW ScholarSpace, using Box and Dropbox?</p>
 <ul>
-  <li>As of November 2014, maximum size for uploads via Box and Dropbox is 1.9GB. The maximum size will increase significantly once we upgrade our asset management infrastructure in summer 2015, which the GW ScholarSpace team will be testing thoroughly to identify the maximum size.</li>
+  <li>Currently the maximum size for uploads via Box and Dropbox is 1.9GB.</li>
 </ul>
 <p>Who can deposit content into GW ScholarSpace?</p>
 <ul><li>The George Washington University faculty, students and staff may deposit content into GW ScholarSpace, free of charge.  All that is required is a GW NetID and password. Users who are external to GW may view and download open access (publicly available) content. </li></ul>
